add read dataset

--- a/scikit-learn.ipynb
+++ b/scikit-learn.ipynb
@@ -1,20 +1,68 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import Lib"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import *\n",
+    "from pandas import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Read dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello World!\n"
+      "     outlook temperature humidity  windy play\n",
+      "0      sunny         hot     high  False   no\n",
+      "1      sunny         hot     high   True   no\n",
+      "2   overcast         hot     high  False  yes\n",
+      "3      rainy        mild     high  False  yes\n",
+      "4      rainy        cool   normal  False  yes\n",
+      "5      rainy        cool   normal   True   no\n",
+      "6   overcast        cool   normal   True  yes\n",
+      "7      sunny        mild     high  False   no\n",
+      "8      sunny        cool   normal  False  yes\n",
+      "9      rainy        mild   normal  False  yes\n",
+      "10     sunny        mild   normal   True  yes\n",
+      "11  overcast        mild     high   True  yes\n",
+      "12  overcast         hot   normal  False  yes\n",
+      "13     rainy        mild     high   True   no\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello World!\")"
+    "weather = read_csv(\"weather.csv\")\n",
+    "print(weather)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How To Access element\n",
+    "1. weather.loc[0, \"outlook\"] --> if you want to select element outlook in row 0\n",
+    "2. len(weather.index) --> if you want to get row length of datasets"
    ]
   },
   {
